Fixed margins/padding mobile tooltip alignment

--- a/view/adminhtml/web/css/source/_instant-preview.less
+++ b/view/adminhtml/web/css/source/_instant-preview.less
@@ -303,6 +303,9 @@ body.melios-instant-preview {
         }
 
         // Tooltips
+        .admin__field-tooltip {
+            align-self: flex-start;
+        }
         .admin__field-tooltip .admin__field-tooltip-content {
             left: auto;
         }
